--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.username=postgres
 spring.datasource.password=abc3112@
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 project.image=images/
@@ -27,3 +27,6 @@ spring.ecom.app.jwtCookieName=springBootEcom
 #logging.level.com.ecommerce.project=DEBUG
 frontend.url=http://localhost:5173
 image.base.url=http://localhost:9090/images
+
+#STRIPE KEY
+stripe.secret.key=${STRIPE_SECRET_KEY}
